--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -7,6 +7,7 @@
     grid-area: footer;
     position: relative;
     width: 100%;
+    height: 100%;
     background: rgb(99, 61, 161);
     min-height: 100px;
     padding: 20px 50px;
@@ -65,11 +66,13 @@
 }
 
 .wave {
+    
     position: absolute;
+    z-index: 100;
     top: -100px;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 70%;
     background: url("/img/olas_footer.png");
     background-size: 1000px 100px;
 }
