--- a/CSS/index.css
+++ b/CSS/index.css
@@ -304,16 +304,19 @@
     display: flex;
     grid-area: main;
     width: 100%;
-    height: 100vh;
+    height:auto;
     background-color: rgb(25, 25, 25);
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 }
 .search-container_main {
-    width: 100%;
+    width: 40%;
+    max-height: 20%;
+    min-height: 15%;
+    align-items: center;
     display: flex;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+   
     border-radius: 5px;
     overflow: hidden;
     justify-content: center;
@@ -322,8 +325,10 @@
 }
 
 .input_buscador {
+    padding: 11px 20px;
     width: 80%;
     padding: 10px;
+    box-shadow: 0 4px 6px rgba(180, 109, 243, 0.824);
     border: none;
     outline: none;
     font-size: 16px;
@@ -331,23 +336,130 @@
 }
 
 .boton_buscador {
-    padding: 10px 20px;
-    background-color: #4CAF50;
+    padding: 11px 20px;
+    box-shadow: 0 4px 6px rgba(180, 109, 243, 0.824);
+    background-color: #5513e5;
     color: white;
     border: none;
     cursor: pointer;
     border-radius: 0 5px 5px 0;
 }
 
-button:hover {
-    background-color: #45a049;
+.boton_buscador:hover {
+    background-color: #9664e0;
 }
 
 .cajas_empresas{
-    background-color: #4CAF50;
-    width: 200px;
-    height: 200px;
+
+    align-content: space-evenly;
+    justify-content: space-evenly;
+    
+    display: flex;
+    flex-wrap: wrap ;
+    box-shadow: 0 4px 6px rgba(180, 109, 243, 0.824);
+    background-color: #2a2a2a;
+    width: 70%;
+    height: 500px;
+    overflow: scroll;
+    margin-bottom: 200px;
 }
+.caja_1{
+    margin: 10px;
+
+    height: 150px;
+    width: 200px;
+    box-shadow: 0px 3px 5px  #9368e9;
+    border-radius: 20px ;
+    background-image: url(/img/4851696.jpg);
+    background-position: 0px -25px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.caja_2{
+    margin: 10px;
+    height: 150px;
+    width: 200px;
+    box-shadow: 0px 3px 5px  #9368e9;
+    border-radius: 20px ;
+
+}
+
+.caja_3{
+    margin: 10px;
+    background-color: #000000;
+    height: 150px;
+    width: 200px;
+    box-shadow: 0px 3px 5px  #9368e9;
+    border-radius: 20px ;
+}
+
+
+.caja_4{
+    margin: 10px;
+    background-color: #000000;
+    height: 150px;
+    width: 200px;
+    box-shadow: 0px 3px 5px  #9368e9;
+    border-radius: 20px ;
+}
+.caja_5{
+    margin: 10px;
+    background-color: #000000;
+    height: 150px;
+    width: 200px;
+    box-shadow: 0px 3px 5px  #9368e9;
+    border-radius: 20px ;
+}
+.caja_6{
+    margin: 10px;
+    background-color: #000000;
+    height: 150px;
+    width: 200px;
+    box-shadow: 0px 3px 5px  #9368e9;
+    border-radius: 20px ;
+}
+
+
+
+.caja_7{
+    margin: 10px;
+    background-color: #000000;
+    height: 150px;
+    width: 200px;
+    box-shadow: 0px 3px 5px  #9368e9;
+    border-radius: 20px ;
+}
+.caja_8{
+    margin: 10px;
+    background-color: #000000;
+    height: 150px;
+    width: 200px;
+    box-shadow: 0px 3px 5px  #9368e9;
+    border-radius: 20px ;
+}
+.caja_9{
+    margin: 10px;
+    background-color: #000000;
+    height: 150px;
+    width: 200px;
+    box-shadow: 0px 3px 5px  #9368e9;
+    border-radius: 20px ;
+}
+.caja_10{
+   margin: 10px;
+    background-color: #000000;
+    height: 150px;
+    width: 200px;
+    box-shadow: 0px 3px 5px  #9368e9;
+    border-radius: 20px ;
+}
+
+.image_companies{
+    height: 10px;
+    width:200px;
+}
+
 /* ----------------------------------------- FOOTER ------------------------------------------*/
 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
