--- a/CSS/index.css
+++ b/CSS/index.css
@@ -358,37 +358,32 @@
     flex-wrap: wrap ;
     box-shadow: 0 4px 6px rgba(180, 109, 243, 0.824);
     background-color: #2a2a2a;
-    width: 70%;
-    height: 500px;
+    width: 60%;
+    height: 622px;
     overflow: scroll;
     margin-bottom: 200px;
 }
 .caja_1{
     margin: 10px;
-
-    height: 150px;
+    background-color: #000000;
+    height: 220px;
     width: 200px;
     box-shadow: 0px 3px 5px  #9368e9;
     border-radius: 20px ;
-    background-image: url(/img/4851696.jpg);
-    background-position: 0px -25px;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
-
 .caja_2{
     margin: 10px;
-    height: 150px;
+    background-color: #000000;
+    height: 220px;
     width: 200px;
     box-shadow: 0px 3px 5px  #9368e9;
     border-radius: 20px ;
-
 }
 
 .caja_3{
     margin: 10px;
     background-color: #000000;
-    height: 150px;
+    height: 220px;
     width: 200px;
     box-shadow: 0px 3px 5px  #9368e9;
     border-radius: 20px ;
@@ -398,7 +393,7 @@
 .caja_4{
     margin: 10px;
     background-color: #000000;
-    height: 150px;
+    height: 220px;
     width: 200px;
     box-shadow: 0px 3px 5px  #9368e9;
     border-radius: 20px ;
@@ -406,7 +401,7 @@
 .caja_5{
     margin: 10px;
     background-color: #000000;
-    height: 150px;
+    height: 220px;
     width: 200px;
     box-shadow: 0px 3px 5px  #9368e9;
     border-radius: 20px ;
@@ -414,7 +409,7 @@
 .caja_6{
     margin: 10px;
     background-color: #000000;
-    height: 150px;
+    height: 220px;
     width: 200px;
     box-shadow: 0px 3px 5px  #9368e9;
     border-radius: 20px ;
@@ -425,7 +420,7 @@
 .caja_7{
     margin: 10px;
     background-color: #000000;
-    height: 150px;
+    height: 220px;
     width: 200px;
     box-shadow: 0px 3px 5px  #9368e9;
     border-radius: 20px ;
@@ -433,7 +428,7 @@
 .caja_8{
     margin: 10px;
     background-color: #000000;
-    height: 150px;
+    height: 220px;
     width: 200px;
     box-shadow: 0px 3px 5px  #9368e9;
     border-radius: 20px ;
@@ -441,7 +436,7 @@
 .caja_9{
     margin: 10px;
     background-color: #000000;
-    height: 150px;
+    height: 220px;
     width: 200px;
     box-shadow: 0px 3px 5px  #9368e9;
     border-radius: 20px ;
@@ -449,16 +444,13 @@
 .caja_10{
    margin: 10px;
     background-color: #000000;
-    height: 150px;
+    height: 220px;
     width: 200px;
     box-shadow: 0px 3px 5px  #9368e9;
     border-radius: 20px ;
 }
 
-.image_companies{
-    height: 10px;
-    width:200px;
-}
+
 
 /* ----------------------------------------- FOOTER ------------------------------------------*/
 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
